--- a/src/composer.json
+++ b/src/composer.json
@@ -13,9 +13,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "maatwebsite/excel": "^3.1",
-        "mews/captcha": "^3.2",
-        "rap2hpoutre/fast-excel": "^3.2"
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
